# Induction-Y24

Task2/ram_d/: Dockerfile  movies_db.txt  netflix.cpp  password_db.txt  tv_show_db.txt
Task2/ram_d/users/: ramd.txt
Task3_PrinterSystem/: docker-compose.yaml
Task3_PrinterSystem/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
Task3_PrinterSystem/install/printer_system/lib/printer_system/: client_node.py  printer_node.py
Task3_PrinterSystem/install/printer_system/share/printer_system/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
Task3_PrinterSystem/install/printer_system/share/printer_system/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_printer_system__rosidl_generator_cExport-noconfig.cmake  export_printer_system__rosidl_generator_cExport.cmake  export_printer_system__rosidl_generator_pyExport-noconfig.cmake  printer_systemConfig.cmake  (+7 more)
Task3_PrinterSystem/log/: latest_build
Task3_PrinterSystem/src/printer_system/: CMakeLists.txt  package.xml
Task3_PrinterSystem/src/printer_system/install/: local_setup.sh  setup.sh
Task3_PrinterSystem/src/printer_system/install/printer_system/share/printer_system/: package.bash  package.zsh
Task3_PrinterSystem/src/printer_system/log/: latest_build
Task3_PrinterSystem/src/printer_system/printer_system/: printer_node.py
Task3_PrinterSystem/src/printer_system/srv/install/: local_setup.sh  setup.sh
Task3_PrinterSystem/src/printer_system/srv/log/: latest_build
(+22 files in other folders)
